Fixes based on Sonar scanning