@@ -1,4 +1,4 @@
-// Copyright (c) 2019, 2023, Oracle and/or its affiliates.
+// Copyright (c) 2019, 2025, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.operator.helpers;
@@ -7,7 +7,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -182,7 +181,7 @@ class ResourceVersionTest {
     List<ResourceVersion> rvs =
         values.stream().map(ResourceVersion::new).sorted().toList();
 
-    List<String> actual = rvs.stream().map(ResourceVersion::toString).collect(Collectors.toList());
+    List<String> actual = rvs.stream().map(ResourceVersion::toString).toList();
 
     List<String> expected =
         Arrays.asList(
